deploy/linera-dapps-k8s/04-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-linera-dapps-service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/swap
      - /api/ams
      - /api/wlinera
