deploy/linera-dapps-k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: linera-dapps-service-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: linera-dapps-service-traefik-app
    k8s.kuboard.cn/workload: linera-dapps-service-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-linera-dapps-service-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: linera-dapps.hk-testnet.linerameme.fun
      http: &http_rules
        paths:
          - path: /api/swap
            backend:
              serviceName: linera-dapps-service
              servicePort: 30092
    - host: api.hk-testnet.linerameme.fun
      http: &http_rules
        paths:
          - path: /api/swap
            backend:
              serviceName: linera-dapps-service
              servicePort: 30092
    - host: api.hk-testnet.linerameme.fun
      http: &http_rules
        paths:
          - path: /api/ams
            backend:
              serviceName: linera-dapps-service
              servicePort: 30094
    - host: api.hk-testnet.linerameme.fun
      http: &http_rules
        paths:
          - path: /api/wlinera
            backend:
              serviceName: linera-dapps-service
              servicePort: 30091
